# amazon-chime-sdk-sma-meeting-dialer

./: .eslintrc.json  .gitignore  .projenrc.js  .projenrc.ts  README.md  cdk.json  package.json  trigger.json
.github/: dependabot.yml
.github/workflows/: upgrade-site.yml
.projen/: deps.json  tasks.json
site/: package.json  webpack.config.js
site/public/: index.html
site/src/: App.js  Config.js  JoinMeeting.js  MeetingControlBar.js  Roster.js  VideoMeeting.js  index.js
src/: amazon-chime-sdk-sma-meeting-dialer.ts  cloudwatch.ts  cognito.ts  database.ts  eventbridge.ts  index.ts  infrastructure.ts  main.ts  pstnAudio.ts  s3.ts  site.ts
src/resources/createMeeting/: index.py  pyproject.toml
src/resources/endMeeting/: index.py  requirements.txt
src/resources/eventBridge/: index.py  requirements.txt
src/resources/joinMeeting/: index.py
src/resources/queryMeeting/: index.py  requirements.txt
src/resources/s3trigger/: index.py
src/resources/smaHandler/: index.py  pyproject.toml  requirements.txt
test/: main.test.ts
test/__snapshots__/: main.test.ts.snap
