[tool.poetry]
name = "s3trigger"
version = "0.1.0"
description = ""
authors = ["Court Schuett <schuettc@amazon.com>"]
license = "MIT-0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
boto3 = "^1.26.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
